--- a/index.html
+++ b/index.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
   <head>
-    <!-- Basic -->
+    <!-- ================= Basic ================= -->
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=5"
+    />
 
-    <!-- Title & SEO -->
+    <!-- ================= Title & SEO ================= -->
     <title>مزاد عربيتى | منصة مزادات السيارات أونلاين</title>
+
     <meta
       name="description"
       content="مزاد عربيتى منصة مزادات سيارات أونلاين تتيح البيع والشراء من خلال مزايدات مباشرة، شفافة، وبأسعار حقيقية."
     />
+
     <meta
       name="keywords"
       content="مزاد سيارات, بيع سيارات, شراء سيارات, مزاد عربيتى, مزادات أونلاين"
     />
-    <meta name="author" content="Mazad Arabity" />
 
-    <!-- Open Graph -->
+    <meta name="author" content="Mazad Arabity" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://mazadarabity.com/" />
+
+    <!-- ================= Theme ================= -->
+    <meta name="theme-color" content="#0d6efd" />
+
+    <!-- ================= Open Graph ================= -->
     <meta property="og:title" content="مزاد عربيتى | مزادات سيارات مباشرة" />
     <meta
       property="og:description"
@@ -25,16 +36,33 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="ar_AR" />
+    <meta property="og:site_name" content="مزاد عربيتى" />
     <meta property="og:image" content="/branding/og-image.png" />
 
-    <!-- Favicon -->
+    <!-- ================= Twitter ================= -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="مزاد عربيتى | مزادات سيارات" />
+    <meta
+      name="twitter:description"
+      content="منصة مزادات سيارات مباشرة بأسعار حقيقية وشفافية كاملة."
+    />
+    <meta name="twitter:image" content="/branding/og-image.png" />
+
+    <!-- ================= Favicon ================= -->
     <link rel="icon" type="image/png" href="/branding/favicon.png" />
+    <link rel="apple-touch-icon" href="/branding/apple-touch-icon.png" />
   </head>
 
   <body>
+    <noscript>
+      <strong>
+        هذا الموقع يحتاج إلى تفعيل JavaScript للعمل بشكل صحيح.
+      </strong>
+    </noscript>
+
     <div id="root"></div>
 
-    <!-- Vite Entry -->
+    <!-- ================= Vite Entry ================= -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
