--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
   <head>
-    <!-- ================= Basic ================= -->
+    <!--  Basic  -->
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=5"
     />
 
-    <!-- ================= Title & SEO ================= -->
+    <!--  Title & SEO  -->
     <title>مزاد عربيتى | منصة مزادات السيارات أونلاين</title>
 
     <meta
@@ -25,10 +25,10 @@
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://mazadarabity.com/" />
 
-    <!-- ================= Theme ================= -->
+    <!--  Theme  -->
     <meta name="theme-color" content="#0d6efd" />
 
-    <!-- ================= Open Graph ================= -->
+    <!--  Open Graph  -->
     <meta property="og:title" content="مزاد عربيتى | مزادات سيارات مباشرة" />
     <meta
       property="og:description"
@@ -39,7 +39,7 @@
     <meta property="og:site_name" content="مزاد عربيتى" />
     <meta property="og:image" content="/branding/og-image.png" />
 
-    <!-- ================= Twitter ================= -->
+    <!--  Twitter  -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="مزاد عربيتى | مزادات سيارات" />
     <meta
@@ -48,7 +48,7 @@
     />
     <meta name="twitter:image" content="/branding/og-image.png" />
 
-    <!-- ================= Favicon ================= -->
+    <!--  Favicon  -->
     <link rel="icon" type="image/png" href="/branding/favicon.png" />
     <link rel="apple-touch-icon" href="/branding/apple-touch-icon.png" />
   </head>
@@ -62,7 +62,7 @@
 
     <div id="root"></div>
 
-    <!-- ================= Vite Entry ================= -->
+    <!--  Vite Entry  -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
